# vapoursynth-awarpsharp2

./: Makefile.am  configure.ac  meson.build  readme.rst
src/: awarpsharp2.cpp  sse2.cpp
